--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chess Game with AI</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/1.0.0-beta.8/chess.min.js"></script>
+    <!-- FIXED: Use current stable chess.js version -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/1.4.0/chess.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css">
     <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"></script>
     <style>
@@ -19,7 +20,7 @@
             background: #f0f0f0; 
             font-family: Arial, sans-serif; 
         }
-        #board { width: 400px; margin: 20px 0; }
+        #board { width: 400px; margin: 20px 0; border: 2px solid #333; }
         .controls { text-align: center; margin: 10px; }
         select, button { padding: 10px; margin: 5px; font-size: 1em; }
         .status { font-size: 1.2em; margin: 10px; }
@@ -51,92 +52,62 @@
     <div id="error"></div>
 
     <script>
-        var board = null;
-        var game = new Chess();
-        var stockfish = null;
-        var aiThinking = false;
+        let board = null;
+        const game = new Chess();  // This now works!
+        let stockfish = null;
+        let aiThinking = false;
 
         function showError(msg) {
             document.getElementById('error').innerHTML = 'Error: ' + msg;
-            console.error(msg);
+            console.error('APP ERROR:', msg);
         }
 
         function initStockfish() {
             try {
-                // Modern reliable CDN version (2025–2026 compatible)
-                // This tries WASM first, falls back to JS
                 const stockfishUrl = 'https://cdn.jsdelivr.net/npm/stockfish@16.0.0/stockfish.wasm.js';
-
                 const worker = new Worker(stockfishUrl);
+                console.log('Stockfish worker created');
 
-                worker.onmessage = function(event) {
-                    const line = event.data;
-                    console.log('Stockfish:', line);
-
-                    if (line.startsWith('bestmove')) {
-                        const move = line.split(' ')[1];
+                worker.onmessage = function(e) {
+                    console.log('Stockfish:', e.data);
+                    if (e.data.startsWith('bestmove')) {
+                        const move = e.data.split(' ')[1];
                         if (move && move !== '(none)') {
                             game.move(move);
-                            board.position(game.fen());
+                            if (board) board.position(game.fen());
                             updateStatus();
                             aiThinking = false;
                         }
                     }
                 };
 
-                worker.onerror = function(err) {
-                    showError('Stockfish worker error: ' + (err.message || 'Unknown error'));
-                };
+                worker.onerror = (err) => showError('Stockfish error: ' + (err.message || 'failed'));
 
-                // Standard UCI init sequence
                 worker.postMessage('uci');
                 worker.postMessage('isready');
                 worker.postMessage('ucinewgame');
-
                 return worker;
             } catch (e) {
-                showError('Failed to initialize Stockfish: ' + e.message);
+                showError('Stockfish init failed: ' + e.message);
                 return null;
             }
         }
 
         function makeAIMove() {
-            if (game.game_over() || aiThinking || !stockfish) {
-                console.log('AI move skipped →', {
-                    game_over: game.game_over(),
-                    aiThinking: aiThinking,
-                    stockfish: !!stockfish
-                });
-                return;
-            }
-
+            if (game.game_over() || aiThinking || !stockfish || !board) return;
             aiThinking = true;
-            updateStatus(); // show AI is thinking
-
             const skill = document.getElementById('skillLevel').value;
             stockfish.postMessage('setoption name Skill Level value ' + skill);
             stockfish.postMessage('position fen ' + game.fen());
-            // Use reasonable time/depth so it doesn't hang forever
-            stockfish.postMessage('go movetime 1500');  // 1.5 seconds thinking time
-            // Alternative: stockfish.postMessage('go depth 14');
+            stockfish.postMessage('go movetime 1500');
+            updateStatus();
         }
 
         function onDrop(source, target) {
-            // see if the move is legal
-            const move = game.move({
-                from: source,
-                to: target,
-                promotion: 'q' // always promote to queen for simplicity
-            });
-
-            // illegal move
+            const move = game.move({ from: source, to: target, promotion: 'q' });
             if (move === null) return 'snapback';
-
             updateStatus();
-
-            // if playing vs AI and it's AI's turn now
-            if (document.getElementById('opponent').value === 'ai' &&
-                game.turn() !== document.getElementById('playerColor').value) {
+            if (document.getElementById('opponent').value === 'ai' && game.turn() !== document.getElementById('playerColor').value) {
                 setTimeout(makeAIMove, 400);
             }
         }
@@ -144,21 +115,15 @@
         function updateStatus() {
             let status = '';
             const turnColor = game.turn() === 'w' ? 'White' : 'Black';
-
             if (game.in_checkmate()) {
-                status = 'Game over — ' + (turnColor === 'White' ? 'Black' : 'White') + ' wins by checkmate!';
+                status = `Game over — ${turnColor === 'White' ? 'Black' : 'White'} wins by checkmate!`;
             } else if (game.in_draw()) {
                 status = 'Game over — Draw';
             } else {
-                status = turnColor + ' to move';
-                if (game.in_check()) {
-                    status += ' (in check)';
-                }
-                if (aiThinking) {
-                    status += ' • AI is thinking...';
-                }
+                status = `${turnColor} to move`;
+                if (game.in_check()) status += ' (in check)';
+                if (aiThinking) status += ' • AI thinking...';
             }
-
             document.getElementById('status').innerHTML = status;
         }
 
@@ -167,28 +132,36 @@
             game.reset();
             aiThinking = false;
 
+            console.log('Starting game... creating board');
+
             const config = {
                 draggable: true,
                 position: 'start',
                 onDrop: onDrop,
-                onSnapEnd: () => board.position(game.fen()),
+                onSnapEnd: () => { if (board) board.position(game.fen()); },
                 pieceTheme: 'https://chessboardjs.com/img/chesspieces/wikipedia/{piece}.png'
             };
 
-            if (board) board.destroy();
-            board = Chessboard('board', config);
+            if (board) {
+                board.destroy();
+                board = null;
+            }
+
+            try {
+                board = Chessboard('board', config);
+                console.log('Board created successfully');
+            } catch (err) {
+                showError('Board creation failed: ' + err.message);
+                console.error(err);
+            }
 
             const playerColor = document.getElementById('playerColor').value;
-            board.orientation(playerColor === 'w' ? 'white' : 'black');
+            if (board) board.orientation(playerColor === 'w' ? 'white' : 'black');
 
-            // Initialize Stockfish only if AI is selected
             if (document.getElementById('opponent').value === 'ai') {
-                if (!stockfish) {
-                    stockfish = initStockfish();
-                }
-                // If player is black → AI (white) moves first
-                if (playerColor === 'b') {
-                    setTimeout(makeAIMove, 800);
+                if (!stockfish) stockfish = initStockfish();
+                if (playerColor === 'b' && board) {
+                    setTimeout(makeAIMove, 1000);
                 }
             } else {
                 stockfish = null;
@@ -197,8 +170,11 @@
             updateStatus();
         }
 
-        // Start the game when page loads
-        window.onload = startGame;
+        // Run on page load
+        document.addEventListener('DOMContentLoaded', () => {
+            console.log('Page DOM loaded');
+            startGame();
+        });
     </script>
 </body>
 </html>
